
2007-07-02  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/registry.py: Make 2.5g a lower version than 2.5.1 (for grep).

	* lib/localweb.py: Make the globbing pattern more precise, so that
	bison-runtime versions aren't listed on the bison page, for example.

2007-07-01  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Blot out obsolete email addresses that keep
	giving mail delivery failures; replace some of them with good guesses.

	* bin/po-register: Don't send mail when address is '(nothing)'.

2007-06-30  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/create-mail-aliases: Sort each bundle of addresses, weed out
	the duplicates, and join them with line continuation characters.

	* bin/create-mail-aliases: Make chunks of ten addresses per rule.

	* bin/po-register: Grr... -- programming is difficult.

	* registry/registry.sgml: Cleanups.

	* Makefile: Rename 'tarballs/' to 'bundles/', and return to the old,
	incorrect name for the 'tp-robot' package for now.

	* Makefile: Don't send emails to Bruno Haible about matrices any more.

2007-06-29  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, bin/po-register: Stop making symlinks in packages/.

	* registry/registry.sgml: Whitespace adjustments after removal of
	nano_1_0 assignments.

	* lib/run.py: Continue when encoding fails; better send a messed up
	mail than no mail at all.  This is just a workaround for an error
	seen in the logs: """UnicodeEncodeError: 'ascii' codec can't encode
	character u'\xe1' in position 234: ordinal not in range(128)"""

	* bin/po-matrix, Makefile, webgen/layout.html.in:
	Generate the matrices again, and link to the html one.

	* bin/tp-robot: Clarify the acception of files for unassigned domains.

	* bin/po-register: Do not falter when a PO file is submitted by an
	unassigned translator.

	* bin/*: Tell SVN that most of these should stay executable.

	* lib/messages/*.po: Adapt URLs and email addresses to the latest.
